# bitsy

./: .gitignore  Cargo.toml  IDEAS.md  Makefile  README.md  Top.bitsy  gates.py
bitsy/: .gitignore  Cargo.toml  Makefile  README.md  Top.bitsy  Top2.bitsy  gates.py  rustfmt.toml
bitsy/examples/: Gcd.bitsy  Passthrough.bitsy  alts.bitsy  blink.bitsy  blink.ntl  blink.tb  buffer.bitsy  counter.bitsy  demo.bitsy  fns.bitsy  gcd.bitsy  gcd.tb  heart.bitsy  heart.tb  lets.bitsy  matches.bitsy  passthrough.bitsy  passthrough.ntl  riscv.bitsy  riscv.tb  shifter.bitsy  shifter.tb  structs.bitsy  terminal.bitsy  terminal.tb  tutorial_ext.bitsy  tutorial_ext.tb  tutorial_shift_reg.bitsy  tutorial_submods.bitsy  valid.bitsy  vecs.bitsy
bitsy/programs/: hello.s
bitsy/riscv/: decoder.ntl  ifetch.ntl  ifetch.tb  rf.ntl  rf.tb
bitsy/src/: ast.rs  ast_grammar.lalrpop  circuit.rs  common.rs  component.rs  context.rs  defs.rs  depends.rs  error.rs  expr.rs  flatten.rs  grammar.lalrpop  kindcheck.rs  lib.rs  loc.rs  lsp.rs  main.rs  nettle.rs  package.rs  parse.rs  parser.lalrpop  reference.rs  repl.rs  resolve.rs  shapecheck.rs  sim.rs  testbench.rs  testbench_grammar.lalrpop  tests.rs  typecheck.rs  types.rs  value.rs  verilog.rs
bitsy/src/circuit/: check.rs  mlir.rs
bitsy/src/expr/: eval.rs  typecheck.rs
bitsy/src/ext/: mem.rs  monitor.rs  terminal.rs
bitsy/src/package/: resolve.rs
bitsy/src/sim/: eval.rs  ext.rs  tests.rs  value.rs
bitsy/src/sim/ext/: instrmem.rs  mem.rs  monitor.rs  ram.rs  riscv_decoder.rs  terminal.rs  video.rs
docs/: .gitignore  Makefile  pyproject.toml  typesystem.tex
docs/source/: bitsy_ext.py  conf.py  examples.rst  getting-started.rst  index.rst  interfaces.rst  modules.rst  nettle_ext.py  principles.rst  values-and-shapes.rst
docs/source/_static/: custom.css
docs/source/expressions/: index.rst
docs/source/nettle/: index.rst
docs/source/shapes/: builtin-shapes.rst  index.rst  principles.rst  user-defined.rst
docs/source/types/: builtin-shapes.rst  builtin-types.rst  index.rst  user-defined.rst
docs/source/values-and-shapes/: builtin-shapes.rst  index.rst
nettle/: Cargo.toml  Makefile  Top.net  Top.nettle  Top.tb  Top2.net  dump.vcd  gates.py  main.s  make.sh  out2.vcd
nettle/examples/: blink.ntl  blink.tb  demo.ntl  heart.ntl  heart.tb  nodes.ntl  passthrough.ntl  passthrough.tb  riscv.ntl  riscv.tb  terminal.ntl  tutorial_ext.ntl  tutorial_ext.tb  tutorial_submods.ntl
nettle/programs/: mult.s
nettle/riscv/: alu.ntl  control.ntl  core.ntl  core.tb  decoder.tb  immgen.ntl  immgen.tb  prog.py
nettle/src/: ast.rs  circuit.rs  expr.rs  ext.rs  grammar.lalrpop  lib.rs  loc.rs  lsp.rs  main.rs  nettle.rs  parse.lalrpop  parse.rs  parser.lalrpop  path.rs  pretty.rs  reference.rs  repl.rs  sim.rs  testbench.rs  testbench_grammar.lalrpop  tests.rs  types.rs  value.rs  wavedump.rs
nettle/src/expr/: eval.rs  typecheck.rs
nettle/src/ext/: mem.rs  monitor.rs  ram.rs  riscv_decoder.rs  video.rs
nettle2/: Cargo.toml  Top.nettle  Top.tb
pybitsy/: Cargo.toml  Makefile  Top.bitsy  main.py  pyproject.toml
pysim/: Cargo.toml  Top.ntl  main.py  pyproject.toml
repl/: Cargo.toml
rhai-bitsy/: Cargo.toml  script.rhai  top.bitsy
riscv-bitsy/: Cargo.toml  Makefile  riscv.bitsy  terminal.txt
sim/: Cargo.toml  run.sh
src/: ast.rs  main.rs  parser.lalrpop  sim.rs
(+34 files in other folders)
