[package]
name = "bitsy"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19.10"

[dependencies]
lalrpop-util = { version = "0.19.10",  features = ["lexer"] }
pyo3 = { version = "0.18.3", features = ["auto-initialize"] }
regex = "1"
nettle = { path = "../nettle" }
log = "0.4.17"
simple_logger = "4.1.0"
lazy_static = "1.4.0"
serde_json = "1.0.96"
fern = "0.6.2"

[[bin]]
name = "bitsy-lsp"
path = "src/lsp.rs"
