[package]
name = "bitsy"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
lalrpop = "0.20.0"

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
clap = { version = "4.4.11", features = ["derive"] }
ctrlc = "3.4.1"
fern = "0.6.2"
lalrpop = "0.20.0"
lalrpop-util = "0.20.0"
lazy_static = "1.4.0"
log = "0.4.20"
riscy = "0.4.0"
rustyline = { version = "12.0.0", features = ["with-file-history"] }
serde_json = "1.0.108"

[[bin]]
name = "bitsy"
path = "src/main.rs"

[[bin]]
name = "bitsy-lsp"
path = "src/lsp.rs"
