[package]
name = "bitsy"
version = "0.3.0"
edition = "2021"
authors = ["Michael Maloney"]
build = "build.rs"
default-run = "bitsy"
homepage = "https://bitsy-lang.org/"
publish = false

[build-dependencies]
lalrpop = "0.20.0"

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
clap = { version = "4.4.11", features = ["derive"] }
ctrlc = "3.4.1"
fern = "0.6.2"
lalrpop = "0.20.0"
lalrpop-util = "0.20.0"
lazy_static = "1.4.0"
log = "0.4.20"
once_cell = "1.19.0"
petgraph = "0.6.4"
riscy = "0.4.0"
rustyline = { version = "12.0.0", features = ["with-file-history"] }
serde_json = "1.0.108"

[[bin]]
name = "bitsy"
path = "src/main.rs"
