[package]
name = "nettle"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
lalrpop = "0.20.0"

[dependencies]
anyhow = "1.0.75"
ctrlc = "3.4.1"
lalrpop = "0.20.0"
lalrpop-util = "0.20.0"
lazy_static = "1.4.0"
riscy = "0.4.0"
rustyline = { version = "12.0.0", features = ["with-file-history"] }
